EMP-WBC-1 1. Base page component has been created. 2. Page and content-page templates have been created.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/customfooterlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/customfooterlibs.html
@@ -1,4 +1,6 @@
-
+<!--/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Copyright 2019 Epam Systems company.
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/-->
 <sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html">
     <sly data-sly-call="${clientlib.js @ categories=['example.base','example.base.page.preloader']}"></sly>
 </sly>
