--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/content.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/content.html
@@ -1,3 +1,6 @@
+<!--/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Copyright 2019 Epam Systems company.
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/-->
 <!--/* The content is located here */-->
 <div class="container">
     Hello World!
