--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/customheaderlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/customheaderlibs.html
@@ -1,4 +1,6 @@
-
+<!--/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Copyright 2019 Epam Systems company.
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/-->
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
      data-sly-call="${clientlib.css @ categories='example.base'}"></sly>
 
