EPM-WBC-1 1. Base page components has been added. 2. Required libs were added as well. 3. Lib dependencies were set up.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-footer.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-footer.html
@@ -1,5 +1,4 @@
 <!--/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   ~ Copyright 2019 Epam Systems company.
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/-->
-<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
-     data-sly-call="${clientlib.css @ categories='aem-workbook.base'}"/>
+<div>Footer</div>
