--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/preloader.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/preloader.html
@@ -1,5 +1,7 @@
 <!--/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   ~ Copyright 2019 Epam Systems company.
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/-->
-<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
-     data-sly-call="${clientlib.css @ categories='aem-workbook.base'}"/>
+<!-- Page Preloder -->
+<div id="preloder">
+    <div class="loader"></div>
+</div>
