--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-footer.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-footer.html
@@ -1,1 +1,7 @@
-<div>Footer</div>
+<!-- Footer -->
+<footer class="fixed-bottom py-3 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+</footer>
+
