EPM-WBC-2 1. The page component was adapted to bootstrap; 2. The Content page component was added; 3. page-content template resourceType was changed to the new created component.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/body.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/body.html
@@ -1,5 +1,6 @@
 <sly data-sly-include="body-topnav.html"></sly>
 <div class="container">
+    <sly data-sly-include="content.html"></sly>
     <sly data-sly-use.templatedContainer="com.day.cq.wcm.foundation.TemplatedContainer"
          data-sly-repeat.child="${templatedContainer.structureResources}"
          data-sly-resource="${child.path @ resourceType=child.resourceType, decorationTagName='div'}"></sly>
