created cq: dialog for the component

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/event/event-creator/event-creator.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/event/event-creator/event-creator.html
@@ -1,22 +1,22 @@
 <div class="event-wrapper">
     <div class="event-inputs">
         <div class="event event_text">
-            <span>Event Name</span>
+            <span>${properties.text}</span>
             <input type="text" name="eventText">
         </div>
 
         <div class="event event_date">
-            <span>Event Date</span>
+            <span>${properties.date}</span>
             <input type="date" name="eventDate">
         </div>
 
         <div class="event event_time">
-            <span>Event Time</span>
+            <span>${properties.time}</span>
             <input type="time" name="eventTime">
         </div>
 
         <div class="event event_user">
-            <span>User Name</span>
+            <span>${properties.user}</span>
             <input type="text" name="eventUser">
         </div>
     </div>
