--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/container/container.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/container/container.html
@@ -5,7 +5,7 @@
      data-sly-use.items="aem-workbook/components/content/grid/event/templates/items.html"></sly>
 
 <sly data-sly-test.eventList="${itemContainer.eventItems}">
-    <div class="row">
+    <div class="row mt-3 mb-3">
         <sly data-sly-list="${eventList}">
             <sly data-sly-call="${items.base @ item=item }"></sly>
         </sly>
