--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-topnav.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-topnav.html
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+<sly data-sly-use.navigation="by.gomel.epam.core.models.structure.TopNavigationModel"></sly>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">Start Bootstrap</a>
@@ -8,20 +9,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
+                <sly data-sly-list.rootPage="${navigation.rootPages}">
+                    <li class="nav-item ${currentPage.title==rootPage.title?'active':''}">
+                        <a class="nav-link" href="${rootPage.path @ extension='html'}">${rootPage.title}
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                </sly>
             </ul>
         </div>
     </div>
