EPM-WBC-2-fix 1. Small fix logic inside EventItemContainer; 2. Warning and log messages were changed to be more helpful.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/container/container.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/container/container.html
@@ -19,7 +19,7 @@
     </sly>
     <sly data-sly-test="${!isProd}">
         <div class="alert alert-warning" role="alert">
-            The event data is not received from the service EventItemContainer!
+            The event data is not received from the service inside EventItemContainer!
         </div>
     </sly>
 </sly>
