EPM-WBC-7 1. Fixing typing errors; 2. Logic of the model "EventItemContainer" has been moved to @PostConstruct method; 3. Topnavigation panel was moved from script to the new component.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-topnav.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-topnav.html
@@ -1,23 +1,2 @@
 <!-- Navigation -->
-<sly data-sly-use.navigation="by.gomel.epam.core.models.structure.TopNavigationModel"></sly>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="${navigation.homeRootPagePath @ extension='html'}">AEM-workbook</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <sly data-sly-list.rootPage="${navigation.rootPages}">
-                    <li class="nav-item ${currentPage.title == rootPage.title ? 'active' : ''}">
-                        <a class="nav-link" href="${rootPage.path @ extension='html'}">${rootPage.title}
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                </sly>
-            </ul>
-        </div>
-    </div>
-</nav>
-<div style="height: 56px"></div>
+<sly data-sly-resource="${'topnav' @ resourceType='aem-workbook/components/structure/topnav'}"></sly>
