Renamed Group ID from 'by.gomel.epam' to 'com.company'

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/container/container.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/container/container.html
@@ -1,7 +1,7 @@
 <!-- The container of Events -->
 <div>Container</div>
 
-<sly data-sly-use.itemContainer="by.gomel.epam.core.models.EventItemContainer"
+<sly data-sly-use.itemContainer="com.company.core.models.EventItemContainer"
      data-sly-use.items="aem-workbook/components/content/grid/event/templates/items.html"></sly>
 
 <sly data-sly-test.eventList="${itemContainer.eventItems}">
