--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-topnav.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-topnav.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<sly data-sly-use.navigation="by.gomel.epam.core.models.structure.TopNavigationModel"></sly>
+<sly data-sly-use.navigation="com.company.core.models.structure.TopNavigationModel"></sly>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <a class="navbar-brand" href="${navigation.homeRootPagePath @ extension='html'}">AEM-workbook</a>
