EPM-WBC-7 1. Russian version of the content was added into project; 2. Language selector was added to the menu; 3. New translation dictionaries (en,ru) were created under i18n folder; 4. Title of the page "Create Event" was renamed to "Create": for proper use of the dynamic generated dictionary keys;

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-footer.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-footer.html
@@ -2,7 +2,7 @@
 <div style="height: 56px"></div>
 <footer class="fixed-bottom py-3 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+        <p class="m-0 text-center text-white">${'page.base.footer.copyright' @ i18n}</p>
     </div>
 </footer>
 
