--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-topnav.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/page/body-topnav.html
@@ -25,7 +25,7 @@
                        aria-haspopup="true"
                        aria-expanded="false">${'page.base.navigation.menu.title.language' @ i18n}</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownSelectLang">
-                        <sly data-sly-list="${navigation.languages}">
+                        <sly data-sly-list="${navigation.languagePages}">
                             <a class="dropdown-item" href="${item.path @ extension='html'}">
                                 <span class="flag-icon flag-icon-${item.language.language.toLowerCase}"></span>${'{1} ({0})'
                                 @ format=[item.language.language.toUpperCase,item.title]}</a>
