implemented the delete method, post servlet divided into two classes in order to process whether JSON or form data depending on the selector.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/event/event-creator/event-creator.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/event/event-creator/event-creator.html
@@ -2,12 +2,12 @@
     <div class="event-inputs">
         <div class="event event_text">
             <span>${properties.text}</span>
-            <input type="text" name="eventText">
+            <input type="text" name="eventName">
         </div>
 
         <div class="event event_date">
             <span>${properties.date}</span>
-            <input type="date" name="eventDate">
+            <input type="date" name="eventDateHtmlFormat">
         </div>
 
         <div class="event event_time">
