--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/event/event-form/event-form.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/event/event-form/event-form.html
@@ -10,7 +10,7 @@
         <div class="form-group row">
             <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Select Date</label>
             <div class="col-sm-10">
-                <input type="date" class="form-control form-control-lg" name="eventDate"
+                <input type="date" class="form-control form-control-lg" name="eventDateHtmlFormat"
                        placeholder="col-form-label-lg">
             </div>
         </div>
