--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/templates/item.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/templates/item.html
@@ -1,6 +1,6 @@
 <sly data-sly-template.base="${ @ item}}">
     <div class="col-12 col-md-6 col-lg-4 mt-3">
-        <div class="card">
+        <div class="card" id="${item.id}">
             <div class="card-header">
                 ${item.eventName}
             </div>
@@ -9,7 +9,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">${item.eventTime} / ${item.eventDate}</h6>
                 <hr/>
                 <div class="row">
-
+                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Delete</button>
                 </div>
             </div>
         </div>
