--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/customfooterlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/customfooterlibs.html
@@ -1,3 +1,3 @@
 <sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html">
-    <sly data-sly-call="${clientlib.js @ categories='[aem-workbook.base,aem-workbook.content]'}"></sly>
+    <sly data-sly-call="${clientlib.js @ categories='aem-workbook.base,aem-workbook.content'}"></sly>
 </sly>
