EPM-WBC-10 1. Breadcrumb component was added to content page; 2. Carousel component was added to "home page"; 3. EventService was added new method to get closest events; 4. Formatting of the date was added.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/content.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/content.html
@@ -1,1 +1,2 @@
 <!-- The Content is placed here! -->
+<sly data-sly-resource="${ @ resourceType='/apps/aem-workbook/components/content/breadcrumb'}"></sly>
