--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/topnav/topnav.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/topnav/topnav.html
@@ -1,23 +1,39 @@
-<sly data-sly-use.navigation="by.gomel.epam.core.models.structure.TopNavigationModel">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="${navigation.homeRootPagePath @ extension='html'}">AEM-workbook</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <sly data-sly-list.rootPage="${navigation.rootPages}">
-                        <li class="nav-item ${currentPage.title == rootPage.title ? 'active' : ''}">
-                            <a class="nav-link" href="${rootPage.path @ extension='html'}">${rootPage.title}
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                    </sly>
-                </ul>
-            </div>
+<!-- Navigation -->
+<sly data-sly-use.navigation="com.company.core.models.structure.TopNavigationModel"></sly>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="${navigation.currentHomeRootPagePath @ extension='html'}">AEM-workbook</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <sly data-sly-list.rootPage="${navigation.rootPages}">
+                    <li class="nav-item ${currentPage.title == rootPage.title ? 'active' : ''}">
+                        <!--/* WARNING This part are used as an example of the dynamic menu builders */-->
+                        <a class="nav-link" href="${rootPage.path @ extension='html'}">
+                            <sly data-sly-test.key="${'page.base.navigation.menu.title.{0}' @ format=[rootPage.title.toLowerCase]}">
+                                ${key @i18n}
+                            </sly>
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                </sly>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownSelectLang" data-toggle="dropdown"
+                       aria-haspopup="true"
+                       aria-expanded="false">${'page.base.navigation.menu.title.language' @ i18n}</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownSelectLang">
+                        <sly data-sly-list="${navigation.languagePages}">
+                            <a class="dropdown-item" href="${item.path @ extension='html'}">
+                                <span class="flag-icon flag-icon-${item.language.language.toLowerCase}"></span>${'{1} ({0})'
+                                @ format=[item.language.language.toUpperCase,item.title]}</a>
+                        </sly>
+                    </div>
+                </li>
+            </ul>
         </div>
-    </nav>
-    <div style="height: 56px"></div>
-</sly>
+    </div>
+</nav>
+<div style="height: 56px"></div>
