--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/breadcrumb/breadcrumb.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/breadcrumb/breadcrumb.html
@@ -3,7 +3,13 @@
     <ol class="breadcrumb">
         <sly data-sly-list="${breadcrumb.pageChain}">
             <li class="breadcrumb-item ${itemList.last?'active':''}">
-                <a href="${item.path @ extension='html'}">${item.title}</a></li>
+                <sly data-sly-test="${!itemList.last}">
+                    <a href="${item.path @ extension='html'}">${item.title}</a>
+                </sly>
+                <sly data-sly-test="${itemList.last}">
+                    <a>${item.title}</a>
+                </sly>
+            </li>
         </sly>
     </ol>
 </nav>
