--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/templates/item.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/templates/item.html
@@ -10,6 +10,7 @@
                 <hr/>
                 <div class="row">
                     <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Delete</button>
+                    <button type="button" class="btn btn-info update">Update</button>
                 </div>
             </div>
         </div>
