EPM-WBC-12 1. Added TODO notices; 2. Added new Clock component

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/carousel/carousel.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/carousel/carousel.html
@@ -29,3 +29,12 @@
         </div>
     </sly>
 </div>
+<!--/* TODO:
+     1. Add functionality to display items that are added within last 1,2,3,... days/hours
+        and add UI component that is used to perform it.
+     2. Create the same component that displays the events have passed resently (within ...,3,2,1
+        days/hours ego, for example).
+     3. Create dialog to configure each step (1 and 2);
+     4. Add new functionality to chose number of the items slided per one time;
+     5. Add ability to configure this functionality(p.4) by dialog window.
+ */-->
