--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/carousel/templates/items.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/carousel/templates/items.html
@@ -15,3 +15,8 @@
         </div>
     </div>
 </sly>
+<!--/* TODO:
+    1. Add new functionality to display items that are new within last 2 days;
+    2. Add button to move on event page;
+    3. Create event page;
+*/-->
