--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/clock/clock.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/clock/clock.html
@@ -1,8 +1,28 @@
-<div class="cleanslate w24tz-current-time w24tz-middle"
-     style="display: inline-block !important; visibility: hidden !important; min-width:300px !important; min-height:145px !important;">
-    <p><a href="//24timezones.com/Беларусь/время" style="text-decoration: none" class="clock24"
-          id="tz24-1559906463-cc10397-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIxIiwic2hvd3NlY29uZHMiOiIwIiwiY29udGFpbmVyX2lkIjoiY2xvY2tfYmxvY2tfY2I1Y2ZhNDg5ZjhlZjhlIiwidHlwZSI6ImRiIiwibGFuZyI6InJ1In0="
-          title="Time" target="_blank" rel="nofollow">Беларусь</a></p>
-    <div id="clock_block_cb5cfa489f8ef8e"></div>
+<div class="row">
+    <div class="col-md-2 cleanslate w24tz-current-time w24tz-middle"
+         style="display: inline-block !important; visibility: hidden !important; min-width:300px !important; min-height:145px !important;">
+        <p><a href="//24timezones.com/current_local/belarus_time.php" style="text-decoration: none" class="clock24"
+              id="tz24-1560943793-cc10397-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIxIiwic2hvd3NlY29uZHMiOiIxIiwiY29udGFpbmVyX2lkIjoiY2xvY2tfYmxvY2tfY2I1ZDBhMWNiMWRlYWJjIiwidHlwZSI6ImRiIiwibGFuZyI6ImVuIn0="
+              title="Current time in Belarus" target="_blank" rel="nofollow">Belarus</a></p>
+        <div id="clock_block_cb5d0a1cb1deabc"></div>
+    </div>
+    <div class="col-md-1" style="padding: 0">
+        <div class="arrow-right">
+            <div class="vertical-text">NEXT</div>
+        </div>
+    </div>
+    <div class="col-md-7">
+        <div class="text-center">
+            Next available event!(See TODO notices.)
+        </div>
+    </div>
 </div>
+
 <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+
+<!--/* TODO:
+    1. Implement component that will display closest event(replace line 16 with the result);
+    2. Implement component that will display time left to event(HH:mm:ss);
+    3. Implement component that will display "Soon" if felt less then hour to event begining;
+    4. ...
+*/-->
