--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/item/item.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/item/item.html
@@ -1,2 +1,8 @@
 <!-- The item of Event -->
 <div>Event Item</div>
+<!--/* TODO:
+    1. Create new component that will be used on the event page
+       to dispaly information about the event;
+    2. You have to use i18n(internationalisation);
+    3. ....
+*/-->
