--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/templates/item.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/templates/item.html
@@ -18,3 +18,8 @@
         </div>
     </div>
 </sly>
+<!--/* TODO:
+    1. Add additional fields: short description, description;
+    2. "Short description" field have to be dispayed as content of the each item;
+    3. Add localisation for date/time property(line 10).
+*/-->
