--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/templates/item.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/grid/event/templates/item.html
@@ -10,7 +10,7 @@
                     ${'hh:mm' @ format=item.eventDate} / ${'dd MMMM yyyy' @ format=item.eventDate}
                 </h6>
                 <hr/>
-                <div class="row">
+                <div>
                     <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Delete</button>
                     <button type="button" class="btn btn-info update">Update</button>
                 </div>
