1. Fix client libs issues; 2. Fix color of the carousel

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/carousel/carousel.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/carousel/carousel.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide mt-3" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide mt-5 mb-5" data-ride="carousel">
     <sly data-sly-use.events="com.company.core.models.structure.CarouselTopEventModel"
          data-sly-use.carouselItems="aem-workbook/components/content/carousel/templates/items.html"></sly>
 
