--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/customheaderlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/structure/content-page/customheaderlibs.html
@@ -1,3 +1,3 @@
-<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
-     data-sly-call="${clientlib.css @ categories='aem-workbook.base,aem-workbook.content'}"/>
-
+<sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html">
+    <sly data-sly-call="${clientlib.css @ categories='aem-workbook.base,aem-workbook.content'}"></sly>
+</sly>
