EPM-WBC-13 UI Validation was added. 1. POM dependencies were updated; 2. Filter class was added; 3. Servlet class was changed; 4. Event-form script was updated; 5. FormEventModel: method added.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/event/event-form/event-form.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-workbook/components/content/event/event-form/event-form.html
@@ -1,6 +1,11 @@
-<sly data-sly-use.eventModel="com.company.core.models.EventById"></sly>
+<sly data-sly-use.eventModel="com.company.core.models.FormEventModel"></sly>
 <sly data-sly-test.event="${eventModel.event}"></sly>
 
+<sly data-sly-test="${eventModel.errorMessage}">
+    <div class="alert alert-danger" role="alert">
+        ${eventModel.errorMessage.toUpperCase}
+    </div>
+</sly>
 
 <form action="/bin/event/form" method="post">
     <sly data-sly-test.updateMode="${properties.isUpdatedForm}">
